assets/css/main.css
/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap'); */
/* @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap'); */
/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap'); */
/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap'); */

@import url('//fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
@import url('//fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
@import url('//fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
@import url('//fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap');

* {
    margin: 0;
    padding: 0;
}

header {
    border-bottom: solid 2px #DA6677;
    background: #21404B;
}

.logo-container {
    display: flex;
    justify-content: center;
    padding: 20px;
}

.logo-container a {
    font-family: 'Orbitron', sans-serif;
    font-size: 50px;
    color: #8BA0A5;
    text-shadow: 2px 2px #082A35;
    text-decoration: none;
}

.logo-container a:hover {
    color: #6b7f86;
}

div.navbar-container {
    width: 55%;
    margin: 0px auto;
}

.navbar-container {
    display: flex;
    border-top: solid 1px #FFFFFF;
    justify-content: center;
    padding: 20px 0px;
    margin-top: 15px;
}

.navbar-container li {
    font-family: 'Montserrat', sans-serif;
    display: inline;
    margin: 0px 20px;
}

.navbar-container li a {
    color: #FFFFFF;
    padding: 5px 20px 5px 20px;
    text-decoration: none;
}

.navbar-container li a:hover {
    background-color: #D14437;
    border-radius: 18px;
}

#eye-catch {
    background: #EFEFEF;
    height: 60vh;
    padding: 20px;
}

#eye-catch > div {
    display: flex;
    align-items: center;
    padding: 10vh 0px;
    margin: 0px auto;
    width: 90%;
    height: 50%;
    max-width: 62em;
}

#eye-catch > div > div {
    flex-basis: 50%;
    display: block;
}

#eye-catch > div > div:nth-of-type(1) {
    padding-right: 60px;
}

#eye-catch > div > div:nth-of-type(2) {
    padding: 50px 0px 50px 60px;
    border-left: solid 1px #6D6D6D;
}

.social-media-header {
    background: #6EC4E1;
    display: flex;
    justify-content: center;
    height: 10vh;
}

.social-media-header div h1 {
    text-align: center;
    font-family: 'Roboto', sans-serif;
    color: #FFFFFF;
    font-size: 40px;
    line-height: 10vh;
    text-shadow: 3px 3px #1A94BD;
}

.social-media {
    background: #24708c;
}

.social-media div {
    display: flex;
    align-content: center;
    margin: 0px auto;
    width: 90%;
    max-width: 62em;
}

.social-media-column {
    flex: 1;
    display: flex;
    align-items: center;
    padding: 40px 0px;
}

.social-media-column i {
    flex: 1;
    font-size: 70px;
    padding-right: 30px;
    color: #FFFFFF;
}

.social-media-column p {
    flex: 9;
    padding: 30px;
    border-left: solid 1px #FFFFFF;
    font-family: 'Noto Sans JP', sans-serif;
    color: #FFFFFF;
}

.social-media-button {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.social-media-button a {
    flex: 1;
    text-align: center;
    text-decoration: none;
    color: #FFFFFF;
    font-family: 'Noto Sans JP', sans-serif;
    font-weight: normal;
    padding: 15px;
    max-width: 200px;
    border-radius: 100px;
    background: #D46578;
}

.social-media-button a:hover {
    opacity: 0.65;
    transition: opacity 0.5s;
}

.footer {
    display: block;
    box-shadow: 0 50vh 0 50vh #6EC4E1;
    justify-content: center;
    flex-basis: 50%;
}

.footer div div li {
    display: inline;
    font-size: 30px;
    margin-left: 20px;
    margin-right: 20px;
}

